# bruno-autopilot

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: config.py  database.py  llm.py  main.py
app/api/: routes.py
app/models/: __init__.py  content_run.py  keyword.py
app/modules/content/: generator.py  quality.py
app/modules/email/: mailerlite.py  weekly.py
app/modules/gsc/: client.py
app/modules/instagram/: publish.py
app/modules/keywords/: dataforseo.py  research.py
app/modules/publisher/: supabase_client.py
app/modules/reels/: generator.py
app/orchestrator/: pipeline.py  scheduler.py
migrations/: env.py
migrations/versions/: 0001_init.py
tests/: test_content_quality.py
