[tool.poetry]
name = "bruno-autopilot"
version = "0.1.0"
description = "Mindfulness SEO autopilot for Bruno — problem-based keyword research + daily AI blog publishing"
authors = ["Bruno <hello@bruno.ai>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
anthropic = "^0.40.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.0" }
asyncpg = "^0.30.0"
alembic = "^1.13.0"
redis = { extras = ["hiredis"], version = "^5.2.0" }
apscheduler = { extras = ["asyncio"], version = "^3.10.0" }
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
httpx = "^0.27.0"
structlog = "^24.4.0"
python-dotenv = "^1.0.0"
tenacity = "^9.0.0"
prometheus-client = "^0.21.0"
pytz = "^2024.2"
python-slugify = "^8.0.0"
# Later phase (GSC keyword mining) — already declared so the client can land:
google-auth = "^2.35.0"
google-api-python-client = "^2.151.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
respx = "^0.21.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
